@@ -36,9 +36,9 @@ CgUpnpSSDPRequest *cg_upnp_ssdprequest_new()
 	cg_http_request_seturi(ssdpReq, "*");
 	cg_http_request_setversion(ssdpReq, CG_HTTP_VER11);
 
-	return ssdpReq;
-
 	cg_log_debug_l4("Leaving...\n");
+	
+	return ssdpReq;
 }
 
 /****************************************
